# pietravenant-Projects-still-needs-to-be-sorted

./: README.md
BMI_Calculator/: mainwindow.cpp  mainwindow.h  mainwindow.ui
BankAccounts/: BankAccounts.pro  account.cpp  account.h  accountlist.cpp  accountlist.h  cheque.cpp  cheque.h  customer.cpp  customer.h  main.cpp  savings.cpp  savings.h  transaction.cpp  transaction.h
Item/: A3Project.pro  item.cpp  item.h  itemdialog.cpp  itemdialog.h  itemlist.cpp  itemlist.h  itemreader.cpp  itemreader.h  itemwriter.cpp  itemwriter.h  myaction.cpp  myaction.h  mymainwindow.cpp  mymainwindow.h
Music/: CMakeLists.txt  cd.cpp  cd.h  custommodel.cpp  custommodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Product_Program/: CMakeLists.txt  foodproduct.cpp  foodproduct.h  product.cpp  product.h  productlist.cpp  productlist.h  transaction.cpp  transaction.h
ShopApp/: CMakeLists.txt  CMakeLists.txt.user.36e5344  CMakeLists.txt.user.5545c58  Resource.qrc  addcustomerdialog.cpp  addcustomerdialog.h  additemdialog.cpp  additemdialog.h  addtransactiondialog.cpp  addtransactiondialog.h  broadcast.cpp  broadcast.h  customer.cpp  customer.h  datastore.cpp  datastore.h  item.cpp  item.h  main.cpp  mainwindow.cpp  mainwindow.h  transaction.cpp  transaction.h
SquabPosition/: SquabPosition.pro  main.cpp  position.cpp  position.h  squab.cpp  squab.h
UdpListen/: CMakeLists.txt  CMakeLists.txt.user.36e5344  CMakeLists.txt.user.5545c58  mainwindow.cpp  mainwindow.h
